toList changed to Collectors.toLost